multiple changes and starting from initial step

--- a/Causes-and-risk.html
+++ b/Causes-and-risk.html
@@ -25,24 +25,24 @@
 
     <!-- New Section Below Header -->
     <div class="content-section" style="text-align: left;">
-        <h1>Prevention and Treatment</h1>
+        <h1>Causes & Risk Factors</h1>
     </div>
 
     <div style="padding: 1.2%;">
         <div class="carddd">
-            <h3>Prevention Strategies:</h3>
-            <p>✅ Spend at least 2 hours outdoors daily</p>
-            <p>✅ Follow proper screen habits – Maintain a good distance from screens</p>
-            <p>✅ Get regular eye exams to detect early changes</p>
+            <h3>Causes:</h3>
+            <p>⚫ Genetics - Higher risk if one or both parents have myopia</p>
+            <p>⚫ Excessive near work – Too much screen time or reading up close</p>
+            <p>⚫ Limited outdoor time – Lack of natural light exposure.</p>
         </div>
     </div>
 
     <div style="padding: 1.2%;">
         <div class="cardd">
-            <h3>Treatment Options:</h3>
-            <p>⚫ Glasses & Contact Lenses – Correct vision but don't slow progression</p>
-            <p>⚫ Orthokeratology (Ortho-K) – Special lenses worn overnight to reshape the cornea</p>
-            <p>⚫ Atropine Drops – Low-dose drops shown to slow myopia progression</p>
+            <h3>Risk Factors:</h3>
+            <p>🚨 Spending long hours on digital devices</p>
+            <p>🚨 Poor lighting and improper screen distance</p>
+            <p>🚨 Inadequate eye care and regular check-ups</p>
         </div>
     </div>
 
