--- a/effects-of-blue.html
+++ b/effects-of-blue.html
@@ -25,24 +25,19 @@
 
     <!-- New Section Below Header -->
     <div class="content-section" style="text-align: left;">
-        <h1>Prevention and Treatment</h1>
+        <h1>Effects of Blue Light</h1>
+        <h4>
+            Blue light from screens and digital devices can contribute to digital eye strain and may impact sleep
+            quality. While it doesn't directly cause myopia, prolonged exposure can worsen symptoms.
+        </h4>
     </div>
 
     <div style="padding: 1.2%;">
         <div class="carddd">
-            <h3>Prevention Strategies:</h3>
-            <p>✅ Spend at least 2 hours outdoors daily</p>
-            <p>✅ Follow proper screen habits – Maintain a good distance from screens</p>
-            <p>✅ Get regular eye exams to detect early changes</p>
-        </div>
-    </div>
-
-    <div style="padding: 1.2%;">
-        <div class="cardd">
-            <h3>Treatment Options:</h3>
-            <p>⚫ Glasses & Contact Lenses – Correct vision but don't slow progression</p>
-            <p>⚫ Orthokeratology (Ortho-K) – Special lenses worn overnight to reshape the cornea</p>
-            <p>⚫ Atropine Drops – Low-dose drops shown to slow myopia progression</p>
+            <h3>How to Reduce Blue Light Exposure:</h3>
+            <p>⚫ Use blue light filters or glasses</p>
+            <p>⚫ Follow the 20-20-20 rule (Every 20 minutes, look 20 feet away for 20 seconds)</p>
+            <p>⚫ Limit screen time before bed</p>
         </div>
     </div>
 
