added insta link

--- a/effects-of-blue.html
+++ b/effects-of-blue.html
@@ -45,7 +45,8 @@
         <div class="cardd">
             <h3>Take Action!</h3>
             <p>🔹 Protect your vision today by making small lifestyle changes!</p>
-            <p>🔹 Follow us on Instagram for more tips & updates!</p>
+                        <p>🔹 Follow us on Instagram for more tips & updates!&nbsp;<a href="https://www.instagram.com/myopia_awareness/#">@myopia_awareness</a></p>
+
             <p>🔹 Talk to an eye doctor if you notice signs of myopia.</p>
         </div>
     </div>
