--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <div class="logo">Myopia Awareness
-</div>
+        </div>
         <nav class="nav">
             <ul>
                 <li><a href="./index.html">Home</a></li>
@@ -57,7 +57,7 @@
         <div class="cardd">
             <h3>Take Action!</h3>
             <p>🔹 Protect your vision today by making small lifestyle changes!</p>
-            <p>🔹 Follow us on Instagram for more tips & updates!</p>
+            <p>🔹 Follow us on Instagram for more tips & updates!&nbsp;<a href="https://www.instagram.com/myopia_awareness/#">@myopia_awareness</a></p>
             <p>🔹 Talk to an eye doctor if you notice signs of myopia.</p>
         </div>
     </div>
