added google tag manager

--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Header</title>
     <link rel="stylesheet" href="styles.css">
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-R0L3NYHKYK"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-R0L3NYHKYK');
+    </script>
 </head>
 
 <body>
@@ -57,7 +66,8 @@
         <div class="cardd">
             <h3>Take Action!</h3>
             <p>🔹 Protect your vision today by making small lifestyle changes!</p>
-            <p>🔹 Follow us on Instagram for more tips & updates!&nbsp;<a href="https://www.instagram.com/myopia_awareness/#">@myopia_awareness</a></p>
+            <p>🔹 Follow us on Instagram for more tips & updates!&nbsp;<a
+                    href="https://www.instagram.com/myopia_awareness/#">@myopia_awareness</a></p>
             <p>🔹 Talk to an eye doctor if you notice signs of myopia.</p>
         </div>
     </div>
