--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
     <title>Header</title>
     <link rel="stylesheet" href="styles.css">
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-R0L3NYHKYK"></script>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-3KRDEPPVPL"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag() { dataLayer.push(arguments); }
         gtag('js', new Date());
 
-        gtag('config', 'G-R0L3NYHKYK');
+        gtag('config', 'G-3KRDEPPVPL');
     </script>
 </head>
 
